--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Focus App</title>
   </head>
   <body>
+    <script>
+      var global = window
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
